player time and little things

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,172 +1,172 @@
 [
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "Indie Lights",
     "title": "Сведение и мастеринг альбома",
     "category": "music",
     "isPopular": true
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "Blue Frame Studio",
     "title": "Звуковой дизайн короткометражного фильма",
     "category": "postProduction"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "Бизнес Среда",
     "title": "Монтаж и очистка звука подкаста",
     "category": "speech"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "Fresh Cola",
     "title": "Сведение аудио для ТВ-рекламы",
     "category": "commercial",
     "isPopular": true
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "City Orchestra",
     "title": "Запись живого оркестра",
     "category": "music",
     "isPopular": true
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "North Wind Production",
     "title": "Постпродакшн звука для документального фильма",
     "category": "postProduction"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "AudioBooks Lab",
     "title": "Сведение и мастеринг аудиокниги",
     "category": "speech",
     "isPopular": true
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover1",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover1.jpeg",
     "clientName": "AutoDrive",
     "title": "Создание радиоролика под ключ",
     "category": "commercial"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "MC North",
     "title": "Сведение и мастеринг сингла",
     "category": "music"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Neon Pulse",
     "title": "Продакшн и саунд-дизайн EP",
     "category": "music"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Garage Band",
     "title": "Запись live-сессии в студии",
     "category": "music"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Red Fox Cinema",
     "title": "Саунд-дизайн и сведение трейлера",
     "category": "postProduction"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "StreamLine",
     "title": "Постпродакшн звука серии сериала",
     "category": "postProduction"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Pixel Forge",
     "title": "Звуковое оформление инди-игры",
     "category": "postProduction"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "TechTalk",
     "title": "Монтаж и выравнивание звука YouTube-шоу",
     "category": "speech"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "EduPro",
     "title": "Обработка речи для онлайн-курса",
     "category": "speech"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Narrator Pro",
     "title": "Запись и обработка дикторского текста",
     "category": "speech"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Urban Wear",
     "title": "Сведение аудио для бренд-видео",
     "category": "commercial"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "FitApp",
     "title": "Создание аудио для промо-приложения",
     "category": "commercial"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "MegaMarket",
     "title": "Звуковое оформление рекламы для магазинов",
     "category": "commercial"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Voices United",
     "title": "Запись и сведение хора",
     "category": "music"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Silent Fields",
     "title": "Мастеринг эмбиент-альбома",
     "category": "music"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "Digital Summit",
     "title": "Онлайн-сведение и контроль звука конференции",
     "category": "speech"
   },
   {
-    "audio": "alberto-balsalm",
-    "cover": "cover2",
+    "audio": "alberto-balsalm.mp3",
+    "cover": "cover2.jpeg",
     "clientName": "FM City",
     "title": "Постпродакшн еженедельного радиошоу",
     "category": "commercial"
